QT/WIDGET/QWidget.h

#pragma once

typedef void QWidget;
QWidget* qt_widget_new(QWidget* parent);
void qt_widget_show(QWidget* self);