QT/WIDGET/QPushButton.h

#pragma once

typedef void QPushButton;

QPushButton* qt_push_button_new();